--- a/client/package.json
+++ b/client/package.json
@@ -11,10 +11,13 @@
   },
   "dependencies": {
     "axios": "^1.1.3",
+    "country-state-city": "^3.1.2",
+    "formik": "^2.2.9",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-geolocated": "^4.0.3",
     "react-router-dom": "^6.4.2",
+    "react-select": "^5.6.0",
     "react-toastify": "^9.0.8"
   },
   "devDependencies": {
