--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-geolocated": "^4.0.3",
+    "react-icons": "^4.6.0",
     "react-router-dom": "^6.4.2",
     "react-select": "^5.6.0",
     "react-toastify": "^9.0.8"
